# transformer-mini

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: colab_quickstart.ipynb
scripts/: eval.py  infer.py  train.py
src/transformer_tiny/: __init__.py  config.py  data.py  model.py  tokenizer.py  train_eval.py  utils.py
tests/: test_model_shapes.py  test_tokenizer.py
