[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
src_paths = ["src", "scripts"]
known_first_party = ["transformer_tiny"]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]